--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adare Restaurant</title>
+    <link rel="icon" href="imgs/steakimg.jpg">
     <link rel="stylesheet" href="css/styleRestuant.css">
 </head>
 
